# goblin_fetcher

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/goblin_fetcher/: __init__.py  abatement.py  goblin_fetcher.py  time_series.py
src/goblin_fetcher/resource_manager/: database_manager.py
tests/: abatement_check.py  test_abatement.py  test_goblin_fetcher.py  time_series_test.py
tests/data/: abated_climate_change_animal_emissions_aggregated.csv  abated_climate_change_emissions_totals.csv  abated_climate_totals_time_series.csv  abated_eutrophication_emission_totals.csv  air_quality_animal_emissions_by_category.csv  climate_change_animal_emissions_aggregated.csv  climate_change_emission_totals.csv  climate_forest_totals_time_series.csv  climate_landuse_totals_time_series.csv  climate_livestock_totals_time_series.csv  climate_totals_time_series.csv  crop_national_inputs.csv  eutrophication_emission_totals.csv  instance_1.db  land_use_emissions_totals.csv
